Compar: INFRA-2327: Support Isofox CSV input